syntax = "proto3";
option java_package = "io.aelf.protobuf.generated";
import "client.proto";

message Transaction {
    Address from = 1;
    Address to = 2;
    int64 ref_block_number = 3;
    bytes ref_block_prefix = 4;
    string method_name = 5;
    bytes params = 6;
    bytes signature = 10000;
}



enum TransactionResultStatus {
    NOT_EXISTED = 0;
    PENDING = 1;
    FAILED = 2;
    MINED = 3;
    CONFLICT = 4;
    PENDING_VALIDATION = 5;
    NODE_VALIDATION_FAILED = 6;
}

message TransactionResult {
    Hash transaction_id = 1;
    TransactionResultStatus status = 2;
    repeated LogEvent logs = 3;
    bytes bloom = 4;
    bytes return_value = 5;
    int64 block_number = 6;
    Hash block_hash = 7;
    string error = 10;
}

message LogEvent {
    Address address = 1;
    string name = 2;
    repeated bytes indexed = 3;
    bytes non_indexed = 4;
}
message TransactionExecutingStateSet {
    map<string, bytes> writes = 1;
    map<string, bool> reads = 2;
    map<string, bool> deletes = 3;
}



message SInt32Value
{
    sint32 value = 1;
}

message SInt64Value
{
    sint64 value = 1;
}

